--- a/index.html
+++ b/index.html
@@ -4,25 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My second webpage</title>
-    <link rel="icon" href="favicon.png" type="image/png">
+    <link rel="icon" href="HTML/favicon.png" type="image/png">
 </head>
 <body style="color: white; background-color: gray;">
     <h3> Rick and Morty izlemek için Morty resmine tıkla tıkla</h3>
     <hr>
     <a href="https://yabancidizi.tv/dizi/rick-and-morty-izle-34" target="_blank" title="Click for Rick and Morty">
-    <img src="/resimler/morty.png" alt="Morty" height="200" >
+    <img src="HTML/resimler/morty.png" alt="Morty" height="200" >
     </a>
     <hr>
     <audio loop id="themesong" > 
-        <source src="/müzik/mortytheme.mp3" type="audio/mpeg">    
+        <source src="HTML/müzik/mortytheme.mp3" type="audio/mpeg">    
     </audio>
     <audio id="wubalubadubdub" > 
-        <source src="/müzik/wubba.mp3" type="audio/mpeg">
+        <source src="HTML/müzik/wubba.mp3" type="audio/mpeg">
     </audio>
     <button onclick="playSound()"style="padding: 12px 24px; border-radius: 10px; background-color: Bisque; color: DimGrey; font-size: 18px;" title="Wubalubadubdub için tıkla">Wubalubadubdub! </button>
     <hr>
     <video autoplay loop muted width="330" height="200">
-        <source src="/video/rickdans.mp4" type="video/mp4">
+        <source src="HTML/video/rickdans.mp4" type="video/mp4">
     </video>
      <script>
     
