--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <img src="HTML/resimler/morty.png" alt="Morty" height="200" >
     </a>
     <hr>
-    <audio loop id="themesong" > 
+    <audio loop autoplay id="themesong" > 
         <source src="HTML/müzik/mortytheme.mp3" type="audio/mpeg">    
     </audio>
     <audio id="wubalubadubdub" > 
